--- a/remote_config_keys.json
+++ b/remote_config_keys.json
@@ -1,173 +1,1 @@
-{
-    "conditions": [
-        {
-            "name": "iOS",
-            "expression": "device.os == 'ios'",
-            "tagColor": "INDIGO"
-        },
-        {
-            "name": "Android",
-            "expression": "device.os == 'android'",
-            "tagColor": "TEAL"
-        }
-    ],
-    "parameters": {
-        "country_lat_lng": {
-            "defaultValue": {
-                "value": "[30.044449, 31.2360362]"
-            },
-            "valueType": "STRING"
-        },
-        "payment_profile_enabled": {
-            "defaultValue": {
-                "value": "false"
-            },
-            "valueType": "BOOLEAN"
-        },
-        "app_privacy_policy": {
-            "defaultValue": {
-                "value": "https://electrachargers.com/terms"
-            },
-            "valueType": "STRING"
-        },
-        "partner_branding_enabled": {
-            "defaultValue": {
-                "value": "false"
-            },
-            "valueType": "BOOLEAN"
-        },
-        "country_code_digit": {
-            "defaultValue": {
-                "value": "+20"
-            },
-            "valueType": "STRING"
-        },
-        "app_currency": {
-            "defaultValue": {
-                "value": "EGP"
-            },
-            "valueType": "STRING"
-        },
-        "coupon_enable": {
-            "defaultValue": {
-                "value": "false"
-            },
-            "valueType": "BOOLEAN"
-        },
-        "app_blocker_screen": {
-            "defaultValue": {
-                "value": "{  \"show_btn\": false,  \"title\": \"\",  \"message\": \"\",  \"btn_link\": \"\",  \"btn_title\": \"\",  \"valid\": false}"
-            },
-            "valueType": "JSON"
-        },
-        "app_support_email": {
-            "defaultValue": {
-                "value": "support@electrachargers.com"
-            },
-            "valueType": "STRING"
-        },
-        "terms_and_condition": {
-            "defaultValue": {
-                "value": "https://electrachargers.com/terms"
-            },
-            "valueType": "STRING"
-        },
-        "app_about_url": {
-            "defaultValue": {
-                "value": "https://electrachargers.com/"
-            },
-            "valueType": "STRING"
-        },
-        "app_support_phone": {
-            "defaultValue": {
-                "value": "15547"
-            },
-            "valueType": "STRING"
-        },
-        "app_download_url": {
-            "defaultValue": {
-                "value": "{\"android\":\"https://play.google.com/store/apps/details?id=com.raya.electra&pli=1\",\"ios\":\"https://apps.apple.com/us/app/electraraya/id6748648646\"}"
-            },
-            "valueType": "JSON"
-        },
-        "wallet_enabled": {
-            "defaultValue": {
-                "value": "true"
-            },
-            "valueType": "BOOLEAN"
-        },
-        "app_update_url": {
-            "defaultValue": {
-                "value": ""
-            },
-            "conditionalValues": {
-                "iOS": {
-                    "value": "https://apps.apple.com/us/app/electraraya/id6748648646"
-                },
-                "Android": {
-                    "value": "https://play.google.com/store/apps/details?id=com.raya.electra&pli=1"
-                }
-            },
-            "valueType": "STRING"
-        },
-        "country_code": {
-            "defaultValue": {
-                "value": "EG"
-            },
-            "valueType": "STRING"
-        },
-        "app_subscription_enabled": {
-            "defaultValue": {
-                "value": "false"
-            },
-            "valueType": "BOOLEAN"
-        },
-        "web_app_url": {
-            "defaultValue": {
-                "value": "electra-lite.web.app"
-            },
-            "valueType": "STRING"
-        },
-        "minimum_app_version": {
-            "defaultValue": {
-                "value": "1.0.0"
-            },
-            "valueType": "STRING"
-        },
-        "app_support_url": {
-            "defaultValue": {
-                "value": "https://electrachargers.com/support"
-            },
-            "valueType": "STRING"
-        },
-        "app_favourite_charger_enabled": {
-            "defaultValue": {
-                "value": "false"
-            },
-            "valueType": "BOOLEAN"
-        },
-        "app_delete_policy": {
-            "defaultValue": {
-                "value": "https://portal-electra.web.app/delete-policy"
-            },
-            "valueType": "STRING"
-        },
-        "app_configuration": {
-            "defaultValue": {
-                "value": "{\"reservation_enabled\":false,\"coupon_enabled\":false,\"schedule_enabled\":false,\"rfid_cards_enabled\":true,\"partner_branding_enabled\":false,\"payment_profile_enabled\":false,\"app_subscription_enabled\":false,\"app_favourite_charger_enabled\":false,\"wallet_enabled\":true,\"is_custom_to_stormi\":false}"
-            },
-            "valueType": "JSON"
-        }
-    },
-    "parameterGroups": {},
-    "etag": "etag-1084330859506-29",
-    "version": {
-        "versionNumber": "29",
-        "updateOrigin": "CONSOLE",
-        "updateType": "INCREMENTAL_UPDATE",
-        "updateUser": {
-            "email": "lalit.joshi@evoltsoft.com"
-        },
-        "updateTime": "Mon, 04 Aug 2025 08:29:49 GMT"
-    }
-}
+{"conditions":[{"name":"iOS","expression":"device.os == 'ios'","tagColor":"INDIGO"},{"name":"Android","expression":"device.os == 'android'","tagColor":"TEAL"}],"parameters":{"app_configuration":{"defaultValue":{"value":"{\"reservation_enabled\":false,\"coupon_enabled\":false,\"schedule_enabled\":true,\"rfid_cards_enabled\":true,\"partner_branding_enabled\":false,\"payment_profile_enabled\":false,\"app_subscription_enabled\":false,\"app_favourite_charger_enabled\":false,\"wallet_enabled\":false,\"is_custom_to_stormi\":false,\"flutter_map_enabled\":true,\"has_monthly_billing\":true,\"display_evse_name\":true}"},"valueType":"JSON"},"wallet_enabled":{"defaultValue":{"value":"false"},"valueType":"BOOLEAN"},"country_code_digit":{"defaultValue":{"value":"+20"},"valueType":"STRING"},"app_update_url":{"defaultValue":{"value":""},"conditionalValues":{"iOS":{"value":"https://apps.apple.com/us/app/hled/id6748601479"},"Android":{"value":"https://play.google.com/store/apps/details?id=com.hled.app&pli=1"}},"valueType":"STRING"},"display_evse_name":{"defaultValue":{"value":"true"},"valueType":"BOOLEAN"},"app_support_phone":{"defaultValue":{"value":"5131919"},"valueType":"STRING"},"payment_profile_enabled":{"defaultValue":{"value":"false"},"valueType":"BOOLEAN"},"partner_branding_enabled":{"defaultValue":{"value":"false"},"valueType":"BOOLEAN"},"app_blocker_screen":{"defaultValue":{"value":"{  \"show_btn\": false,  \"title\": \"\",  \"message\": \"\",  \"btn_link\": \"\",  \"btn_title\": \"\",  \"valid\": false}"},"valueType":"JSON"},"app_privacy_policy":{"defaultValue":{"value":"https://portal-hled.web.app/privacy-policy"},"valueType":"STRING"},"app_download_url":{"defaultValue":{"value":"{\"android\":\"https://play.google.com/store/apps/details?id=com.hled.app&pli=1\",\"ios\":\"https://apps.apple.com/us/app/hled/id6748601479\"}"},"valueType":"JSON"},"app_delete_policy":{"defaultValue":{"value":"https://portal-hled.web.app/delete-policy"},"valueType":"STRING"},"app_support_url":{"defaultValue":{"value":"https://portal-hled.web.app/support-policy"},"valueType":"STRING"},"terms_and_condition":{"defaultValue":{"value":"https://portal-hled.web.app/privacy-policy"},"valueType":"STRING"},"app_currency":{"defaultValue":{"value":"ISK"},"valueType":"STRING"},"app_about_url":{"defaultValue":{"value":"https://hled.is/"},"valueType":"STRING"},"country_code":{"defaultValue":{"value":"IS"},"valueType":"STRING"},"app_support_email":{"defaultValue":{"value":"thjonusta@hled.is"},"valueType":"STRING"},"minimum_app_version":{"defaultValue":{"value":"1.0.19"},"valueType":"STRING"},"country_lat_lng":{"defaultValue":{"value":"[64.905812, -18.484047]"},"valueType":"STRING"},"coupon_enable":{"defaultValue":{"value":"false"},"valueType":"BOOLEAN"},"app_favourite_charger_enabled":{"defaultValue":{"value":"false"},"valueType":"BOOLEAN"},"web_app_url":{"defaultValue":{"value":"hled-lite.web.app"},"valueType":"STRING"},"app_subscription_enabled":{"defaultValue":{"value":"false"},"valueType":"BOOLEAN"}},"parameterGroups":{},"etag":"etag-126727075128-26","version":{"versionNumber":"26","updateOrigin":"CONSOLE","updateType":"INCREMENTAL_UPDATE","updateUser":{"email":"dhruvin.shiyani@evoltsoft.com"},"updateTime":"Tue, 07 Oct 2025 06:13:52 GMT"}}
